# openapi.yaml
@@ -3,142 +3,244 @@ info:
   title: Messenger's API Documentation
   version: '1.0.0'
 servers:
-  - url: http://localhost:8080
-security:
-  - Basic: []
+  - url: http://localhost:8080/api/v1
 
 paths:
-  /signup/code_verification:
+  /auth/getOTPcode:
     post:
       tags:
-        - Registration
-      operationId: checkPassCode
-      summary: 'Проверка пароля (пользователя)'
+        - Authentication service
+      description: Generating and sending a token.
+      operationId: getOTPCode
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GetOTPCodeRequest'
       responses:
         '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CodeVerification'
-        '400':
-          description: Bad Request
-        default: # Обработка непредвиденных ошибок сервера
-          description: Internal Server Error # Внутренняя ошибка сервера
-  /signup:
+          description: Success generate and send OTP code.
+  /auth/signUp:
     post:
       tags:
-        - Registration
-      operationId: addUser
-      summary: 'Регистрация нового пользователя'
+        - Authentication service
+      description: Sign up method.
+      operationId: signUp
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignUpRequest'
       responses:
-        '201':
-          description: OK #пользователь создан
+        '200':
+          description: Success sign up.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-        '401':
-          description: Unauthorized #пользователь не авторизован
+                $ref: '#/components/schemas/SignUpAndSignInAndRefreshTokensSuccess'
         '400':
-          description: Bad Request
-        default: # Обработка непредвиденных ошибок сервера
-          description: Internal Server Error # Внутренняя ошибка сервера
-  /signup/send_message_to_support:
+          description: Bad credentials.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignUpAndSignInAndRefreshTokensError'
+  /auth/signIn:
     post:
       tags:
-        - Registration
-      operationId: sendMessageToSupport
-      summary: 'Отправка сообщения в поддержку'
+        - Authentication service
+      description: Sign in method.
+      operationId: signIn
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignInRequest'
       responses:
-        '201':
-          description: OK #сообщение .... создано? отправлено?
+        '200':
+          description: Success sign in.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SendMessageToSuport'
+                $ref: '#/components/schemas/SignUpAndSignInAndRefreshTokensSuccess'
+        '400':
+          description: Bad credentials.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignUpAndSignInAndRefreshTokensError'
+  /auth/refreshTokens:
+    post:
+      tags:
+        - Authentication service
+      description: Tokens refresh method.
+      operationId: refreshTokens
+      parameters:
+        - in: header
+          name: refreshToken
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: Success refresh tokens.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignUpAndSignInAndRefreshTokensSuccess'
         '401':
-          description: Unauthorized #пользователь не авторизован
+          description: Unauthorized request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignUpAndSignInAndRefreshTokensError'
+  /auth/signOut:
+    post:
+      tags:
+        - Authentication service
+      description: Sign out method.
+      operationId: signOut
+      parameters:
+        - in: header
+          name: accessToken
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: Success sign out.
+  /support/createTicket:
+    post:
+      tags:
+        - Support service
+      description: Creating a ticket for support.
+      operationId: createSupportTicket
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateTicketRequest'
+      responses:
+        '201':
+          description: Success creating ticket for support.
         '400':
           description: Bad Request
-        default: # Обработка непредвиденных ошибок сервера
-          description: Internal Server Error # Внутренняя ошибка сервера
 
 components:
-  securitySchemes:
-    Basic:
-      #apiKey, http, oauth2, openIdConnect
-      type: http
-      scheme: basic
-
   schemas:
-
-    User:
+    GetOTPCodeRequest:
+      type: object
       required:
         - phone
-        - firstName
-        - nickname
-      type: object
+        - action
       properties:
         phone:
           type: string
           pattern: '^\d{10}$'
-          description: 'Номер телефона, 10 цифр'
+          description: Mobile phone number.
+          example: '9999999999'
+        action:
+          type: string
+          description: 'Action type: "signUp" for registration, "signIn" for authentication.'
+          example: 'signUp'
+    SignUpRequest:
+      type: object
+      required:
+        - phone
+        - firstName
+        - nickName
+        - otp
+      properties:
+        phone:
+          type: string
+          pattern: '^\d{10}$'
+          description: Mobile phone number.
+          example: '9999999999'
         firstName:
           type: string
+          pattern: '^[A-Za-zА-Яа-я\s]*$'
           maxLength: 64
-          pattern: '^[a-zA-Zа-яА-Я\s]*$'
-          description: 'Имя пользователя, без цифр'
+          description: First name.
+          example: 'John'
         lastName:
           type: string
+          pattern: '^[A-Za-zА-Яа-я\s]*$'
           maxLength: 64
-          #pattern: '^[a-zA-Zа-яА-Я\s]*$'
-          description: 'Фамилия пользователя, без цифр'
           nullable: true
-        nickname:
+          description: Last name.
+          example: 'Doe'
+        nickName:
           type: string
-          maxLength: 32
           minLength: 5
-          #pattern: '^(?!\s+$).*'
-          description: 'Никнейм пользователя, не может быть пустой строкой или состоять только из пробелов'
-        about:
+          maxLength: 32
+          description: Nickname.
+          example: 'John Doe'
+        aboutMe:
           type: string
-          description: 'Персональная информация пользователя'
-          maxLength: 148
+          maxLength: 160
           nullable: true
-
-    SendMessageToSuport:
+          description: About me.
+          example: ''
+        otp:
+          type: string
+          minLength: 6
+          maxLength: 6
+          description: OTP code.
+          example: '123456'
+    SignInRequest:
+      type: object
+      required:
+        - phone
+        - otp
+      properties:
+        phone:
+          type: string
+          pattern: '^\d{10}$'
+          description: Mobile phone number.
+          example: '9999999999'
+        otp:
+          type: string
+          minLength: 6
+          maxLength: 6
+          description: OTP code.
+          example: '123456'
+    SignUpAndSignInAndRefreshTokensSuccess:
+      type: object
+      properties:
+        accessToken:
+          type: string
+          description: Token for access.
+        refreshToken:
+          type: string
+          description: Token for refresh.
+    SignUpAndSignInAndRefreshTokensError:
+      properties:
+        message:
+          type: string
+          description: Error message.
+    CreateTicketRequest:
+      type: object
       required:
         - phone
         - email
         - text
-      type: object
       properties:
         phone:
           type: string
           pattern: '^\d{10}$'
-          description: 'Телефон пользователя'
+          description: Mobile phone number.
+          example: '9999999999'
         email:
           type: string
           #pattern: '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'
-          description: 'Почта пользователя. Валидный email, допустимые символы в локальной части - буквы, цифры, точки, подчеркивания, дефисы и знаки плюса. Обязательно присутствие символа @, затем нескольких символов, далее обязательной точки и снова символов.'
+          description: E-mail.
+          example: 'JohnDoe@yandex.ru'
         text:
           type: string
-          description: 'Текст обращения'
-          maxLength: 500
           minLength: 3
-
-    CodeVerification:
-      required:
-        - phone
-        - code
-      type: object
-      properties:
-        phone:
-          type: string
-          pattern: '^\d{10}$'
-          description: 'Телефон пользователя'
-        code:
-          type: string
-          pattern: '^\d{5}$'
-          description: 'Код-пароль с телефона, 5 цифр' #уточнить
+          maxLength: 500
+          description: Ticket text.
+          example: 'Ticket text.'
