# src/main/java/ru/salfa/messenger/dto/response/TokensResponse.java
@@ -1,0 +1,4 @@
+package ru.salfa.messenger.dto.response;
+
+public record TokensResponse(String accessToken, String refreshToken) {
+}
